web/CSS/sidebar/right/todaysRecipe.css
.todays-recipe {
    padding: 10px;
    border-radius: 5px;
    border: 1px solid rgb(141, 141, 141);
    box-shadow: 0px 0px 20px rgb(136 136 136 / 52%);
    margin-bottom: 5px;
    background: #ffffff6e;
}

.todays-recipe h3,
.todays-recipe p {
    margin: 3px;
}

.todays-recipe img {
    aspect-ratio: 1;
    border-radius: 5px;
    height: 68px;
    align-self: center;
    backdrop-filter: brightness(0.92);
    object-fit: cover;
    margin-right: 5px;
}

.todays-recipe textarea {
    border-radius: 5px;
    border: none;
    background-color: #c2c2c27c;
    width: 100%;
    padding: 7px;
    height: fit-content;
    box-sizing: border-box;
    font-family: Lato, sans-serif;
}

.flex-row {
    display: flex;
}

.todays-recipe ul {
    margin: 6px 0;
}

.ingredients {
    margin: 10px 0;
}

.step {
    background-color: #cdcdcd7c;
    border-radius: 5px;
    padding: 5px;
    box-sizing: border-box;
    border: 1px solid #adadad;
}

.recipe-steps {
    gap: 5px;
    display: flex;
    flex-direction: column;
}

.recipe-info {
    margin-top: 5px;
    gap: 5px;
}

.factoid {
    width: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2px;
    border-radius: 5px;
    padding: 5px;
    box-sizing: border-box;
    background-color: #cdcdcd7c;
    border: 1px solid #a7a7a7;
    flex: 1;
}

.factoid h4,
.factoid p {
    margin: 0;
    max-width: fit-content;
}

.tr-template {
    display: none;
}

.todaysRecipeTab summary {
    margin: 5px 0;
    padding: 5px 10px;
    box-sizing: border-box;
    width: auto;
    background-color: #ffffff6e;
    border: 1px solid #a7a7a7;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
}

.todaysRecipeTab summary::after {
    content: '';
    width: 18px;
    height: 10px;
    background: url('https://uploads.sitepoint.com/wp-content/uploads/2023/10/1697699669arrow.svg') no-repeat;
    background-size: cover;
    transition: 0.2s;
}

.todaysRecipeTab details[open]>summary::after {
    transform: rotate(180deg);
}

.recipe-scroll {
    overflow-y: scroll;
    scrollbar-color: #00000057 #ffffff00;
    padding-bottom: 20px;
    overflow-x: hidden;
}

.todaysRecipeTab {
    height: 100vh;
    flex-direction: column;
}

